--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -60,9 +60,9 @@
             </div>        
         </div>
         
-        <p:ajaxStatus style="width:40px;height:40px;position:fixed;right:7px;bottom:7px">
+        <p:ajaxStatus style="width:50px;height:50px;position:fixed;right:7px;bottom:7px">
            <f:facet name="start">
-               <i class="fa fa-circle-o-notch fa-spin ajax-loader" aria-hidden="true"></i>
+               <i class="fa fa-spinner fa-spin fa-3x fa-fw" aria-hidden="true"></i>
            </f:facet>
 
            <f:facet name="complete">
